# personaplex

./: .env.docker  .env.example  .gitignore  DOCUMENTACAO_TECNICA.md  Dockerfile  GUIA_RAPIDO_SETUP.md  IMPLEMENTACAO_WAKE_WORD.md  INDEX.md  OPENCLAW_MONITOR.md  QUICK_START_GUIDE.md  README.md  ROADMAP_ESTRATEGIA.md  TECHNICAL_DOCUMENTATION.md  docker-compose.yaml
client/: Dockerfile  package-lock.json  package.json
client-angular/: README.md  angular.json  package-lock.json  package.json
client-angular/scripts/: benchmark-wake-word-onnx.mjs
client-angular/src/app/: app.scss  app.spec.ts  app.ts  open-claw-action-feed.service.ts
client-angular/src/app/wake-word/: wake-word-detector.service.doc.md  wake-word-detector.service.spec.ts  (+5 more)
deploy/nginx/: nginx.conf
deploy/systemd/: moshi-openclaw-monitor.service
moshi/: pyproject.toml
moshi/moshi/: __init__.py  offline.py  openclaw_monitor.py  server.py
moshi/moshi/integrations/open_claw/: __init__.py  action_extractor.py  ros_bridge.py  safety_constraints.py  sensor_feedback.py
moshi/moshi/models/: loaders.py
moshi/moshi/modules/: gating.py
moshi/tests/: test_action_extractor.py  test_openclaw_monitor_actions.py  test_ros_bridge.py  test_safety_constraints.py
server/: Dockerfile  drizzle.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
server/src/: index.ts
server/src/db/: client.ts  migrate.ts  schema.ts
server/src/middleware/: auth.ts
server/src/routes/: auth.ts  conversations.ts  messages.ts  preferences.ts
server/tests/: api.test.ts  setup.ts
(+6 files in other folders)
